Update api create and delete data test
